Fixes up CSS spacing

--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,15 @@
 body {
-	margin: 0;
-	padding: 0;
-	font-family: sans-serif;
-	font-size: 14px;
-	text-align: center;
-	background: #ddd;
-	color: #9bacb6;
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+  font-size: 14px;
+  text-align: center;
+  background: #ddd;
+  color: #9bacb6;
 }
 
-canvas, .container{
+canvas,
+.container {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -27,60 +28,59 @@ canvas {
 }
 
 .vert-center {
-	display: block;
-	position: absolute;
-	top: 50%;
-	-webkit-transform: translateY(-50%);
-	-moz-transform: translateY(-50%);
-	transform: translateY(-50%);
-	width: 100%;
+  display: block;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -moz-transform: translateY(-50%);
+  transform: translateY(-50%);
+  width: 100%;
 }
 
 main {
-	margin: 0 auto;
-
+  margin: 0 auto;
 }
 
 h1 {
-	font-size: 5em;
-	margin-bottom: 0.2em;
+  font-size: 5em;
+  margin-bottom: 0.2em;
 }
 
 h2 {
-	font-size: 2em;
-	margin-top: 0.3em;
+  font-size: 2em;
+  margin-top: 0.3em;
 }
 
 ul {
-	list-style: none;
-	padding: 0;
-	margin-top: 4em;
+  list-style: none;
+  padding: 0;
+  margin-top: 4em;
 }
 
 li {
-	display: inline-block;
-	margin: 0 1em;
+  display: inline-block;
+  margin: 0 1em;
 }
 
 a {
-	color: inherit;
-	text-decoration: none;
-	font-size: 1.5em;
-	padding: 0.5em;
-	transition: all 0.5s;
+  color: inherit;
+  text-decoration: none;
+  font-size: 1.5em;
+  padding: 0.5em;
+  transition: all 0.5s;
 }
 
 a:hover {
-	text-decoration: underline;
+  text-decoration: underline;
 }
 
 @media (max-width: 800px) {
-	body {
-		font-size: 16px;
-	}
+  body {
+    font-size: 16px;
+  }
 
-	li {
-		display: block;
-		margin: 2em 1em;
-	}
+  li {
+    display: block;
+    margin: 2em 1em;
+  }
 }
